# managed-api-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
managed_client/: __init__.py  async_client.py  client.py
tests/: test_async_client.py  test_client.py
