[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "managed-client"
version = "0.1.0"
description = "demo"
readme = "README.md"
authors = [
    { name = "Daniel Ball", email = "info@westsmith.co.uk" }
]
requires-python = ">=3.9"
dependencies = [
    "requests",
    "aiohttp",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "black>=25.1.0",
]
